# RBTree-AVLTree

./: Design Document for Group -1.docx  LICENSE  README.md  Video Script.docx  red_black_benchmark.txt
project_rust/: Cargo.toml  plot.py
project_rust/benches/: my_benchmark.rs
project_rust/src/: avl.rs  main.rs  red-black.rs  red_black.rs
