[package]
name = "project_rust"
version = "0.1.0"
authors = ["essamgouda97 <essamgouda97@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
criterion = "0.3"	
rand = "0.7.0"

[[bench]]
name = "my_benchmark"
harness = false